--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <nav>
+    </nav>
     <div id="game-board">
-      <canvas width="800" height="600"></canvas>
+      <canvas width="800" height="500"></canvas>
     </div>
 
     <script src="js/character.js"></script>
     <script src="js/obstacle.js"></script>
+    <script src="js/point.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
