--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <body class="background-game">
     <div class="startScreen" id="remove-screen">
       <div class="instructions">
-        <img src="images/character.gif" alt="Character"/>
+        <img src="images/character-home.png" alt="Character"/>
         <p>En utilisant les flêches ↑ et ↓ de ton clavier, aides Ali la végétarienne à se nourrir. Attention, tu dois éviter les aliments qu'elle ne consomme pas !</p>
       </div>
       <button class="button" id="start-button">start game</button>
     </div>
 
     <div class="gameOver" id="game-over">
-      <button class="button" id="over-button">try again</button>
+      <div class="container">
+        <img src="images/character-over.png" alt="Character"/>
+        <button class="button" id="over-button">try again</button>
+      </div>
     </div>
     
     <div id="game-board">
