--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
-    <title>My first game</title>
+    <title>Feed Ali, the vegetarian !</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts/FR73 Pixel/index.css" />
   </head>
